--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_API_BASE_URL="https://api.vedubuild.org/api"
 VITE_LOCAL_API_BASE_URL="http://localhost:8000/api"
+VITE_RAZORPAY_KEY_ID=rzp_test_RIyQ07Ycvb5zPr
